# stm32f4-discovery-aseba

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  aseba-discovery.cbp  aseba-discovery.layout  core  linkerscript.ld  oocd.cfg  package.yml  patch_hex.py  rules.mk  stm32f407xG.ld  stm32f407xG_no_bootloader.ld
dcmi/: dcmi.c  dcmi.h  dcmi_lld.c  dcmi_lld.h  hal.c  hal.h  hal.mk  platform.mk  readme.txt  stm32_rcc.h  stm32_registry.h
doc/: Makefile  bootloader-aseba.md  bootloader-protocol.md  dfu.md
fatfs/src/: ffconf.h
getImage/: Makefile  SerialComm.cpp  SerialComm.h  getImage  getImage.cpp
src/: aseba.mk  chconf.h  cmd.c  cmd.h  config_flash_storage.c  config_flash_storage.h  exti.c  exti.h  halconf.h  leds.c  leds.h  main.c  main.h  mcuconf.h  memory_protection.c  motor.c  motor.h  panic.c  parameter_port.h  sdcard.c  spi_comm.c  src.mk  unique_id.c  unique_id.h  usbcfg.c  usbcfg.h  utility.c  utility.h
src/LED_RGB/: led_rgb.c  led_rgb.h  package.yml
src/VL53L0X/: VL53L0X.c  VL53L0X.c~  VL53L0X.h
src/accelerometer_demo/: acc_demo.mk  accelerometer.c  accelerometer.h
src/aseba_vm/: aseba.mk  aseba_bridge.c  aseba_bridge.h  aseba_can_interface.c  aseba_can_interface.h  aseba_node.c  aseba_node.h  skel.c  skel.h  skel_user.c  skel_user.h
src/audio/: audio_thread.c  audio_thread.h  microphone.c  microphone.h  mp45dt02_processing.c  mp45dt02_processing.h  mp45dt02_processing_i2s_i2s.c  mp45dt02_processing_i2s_i2s.h
src/camera/: po8030.c  po8030.h
src/discovery_demo/: demo.mk  (+8 more)
tests/: config_save_test.cpp  flash_mock.cpp
(+32 files in other folders)
